--- a/public/upload.html
+++ b/public/upload.html
@@ -6,65 +6,106 @@
     <title>모바일 파일 업로드</title>
     <style>
         body {
-            font-family: sans-serif;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
             text-align: center;
             padding: 20px;
-            background-color: #eef2f7; /* 배경색 통일 */
+            background-color: #f7f7f7;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
         h1 {
-            color: #1a73e8;
-            font-size: 1.5em;
-            margin-bottom: 20px;
+            color: #111;
+            font-size: 1.8em;
+            margin-bottom: 25px;
+            font-weight: 700;
         }
         .container {
-            max-width: 400px;
-            width: 90%; /* 모바일에서 폭을 90%로 설정 */
-            margin: 40px auto; /* 중앙 정렬 */
-            padding: 20px;
-            border: 1px solid #ddd;
+            max-width: 90%;
+            width: 400px;
+            margin: auto;
+            padding: 30px 25px;
             border-radius: 12px;
             background-color: white;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            border: 1px solid #ddd;
         }
+
+        /* 세션 ID 표시 */
+        #sessionIdDisplay {
+            font-size: 1.1em;
+            color: #555;
+            margin-bottom: 20px;
+            padding: 5px;
+            border-bottom: 1px solid #eee;
+        }
+
+        /* 버튼 공통 스타일 */
         .btn-upload {
             display: block;
             width: 100%;
-            padding: 12px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 8px;
+            padding: 15px 0;
+            border: 1px solid #111; /* 블랙 테두리 */
+            border-radius: 6px;
             cursor: pointer;
-            margin-top: 20px;
-            font-weight: bold;
-        }
-        .btn-submit {
-            background-color: #007bff;
             margin-top: 15px;
+            font-weight: bold;
+            font-size: 1.1em;
+            transition: all 0.2s;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+
+        /* 사진 선택 버튼 (화이트/블랙 텍스트) */
+        .btn-select {
+            background-color: white;
+            color: #111;
+        }
+        .btn-select:hover {
+            background-color: #eee;
+        }
+
+        /* 업로드 시작 버튼 (블랙/화이트 텍스트) */
+        .btn-submit {
+            background-color: #111;
+            color: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        }
+        .btn-submit:hover {
+            background-color: #333;
+        }
+
+        /* 선택된 파일 표시 영역 스타일 */
+        #fileNameDisplay {
+            display: block;
+            width: 100%;
+            padding: 12px;
+            border: 1px dashed #ccc;
+            border-radius: 6px;
+            margin: 15px 0;
+            color: #555;
+            background-color: #fafafa;
+            box-sizing: border-box;
+        }
+
         #fileInput {
             display: none;
-        }
-        #fileNameDisplay {
-            padding: 10px;
-            border: 1px dashed #ccc;
-            border-radius: 4px;
-            margin-top: 10px;
         }
     </style>
 </head>
 <body>
 <div class="container">
-    <h1>📸 PC로 사진 전송</h1>
+    <h1>📸 SEND PHOTO TO PC</h1>
     <p id="sessionIdDisplay"></p>
 
     <form id="mobileUploadForm" enctype="multipart/form-data">
         <input type="file" name="mobileImage" id="fileInput" accept="image/*" required>
 
-        <label for="fileInput" class="btn-upload">사진 선택 (앨범/카메라)</label>
-        <p id="fileNameDisplay" style="margin-top: 10px; color: #555;">선택된 파일 없음</p>
+        <label for="fileInput" class="btn-upload btn-select">Select Photo (Album/Camera)</label>
+        <p id="fileNameDisplay">No file selected</p>
 
-        <button type="submit" class="btn-upload btn-submit">업로드 시작</button>
+        <button type="submit" class="btn-upload btn-submit">START UPLOAD</button>
     </form>
 </div>
 
@@ -75,18 +116,18 @@
     const form = document.getElementById('mobileUploadForm');
 
     if (!sessionId) {
-        document.body.innerHTML = '<h1>오류</h1><p>이 페이지는 QR 코드 스캔을 통해서만 접근 가능합니다. (유효한 세션 ID가 필요합니다.)</p>';
+        document.body.innerHTML = '<h1>Error</h1><p>Invalid QR Code or session expired.</p>';
     } else {
-        document.getElementById('sessionIdDisplay').textContent = `연결 세션 ID: ${sessionId.substring(0, 8)}...`;
+        document.getElementById('sessionIdDisplay').textContent = `Session ID: ${sessionId.substring(0, 8)}...`;
 
         const fileInput = document.getElementById('fileInput');
         const fileNameDisplay = document.getElementById('fileNameDisplay');
 
         fileInput.addEventListener('change', (e) => {
             if (e.target.files.length > 0) {
-                fileNameDisplay.textContent = `선택된 파일: ${e.target.files[0].name}`;
+                fileNameDisplay.textContent = `File: ${e.target.files[0].name}`;
             } else {
-                fileNameDisplay.textContent = '선택된 파일 없음';
+                fileNameDisplay.textContent = 'No file selected';
             }
         });
 
@@ -104,10 +145,10 @@
                     const htmlResponse = await response.text();
                     document.body.innerHTML = htmlResponse;
                 } else {
-                    alert(`업로드 실패: ${response.statusText}`);
+                    alert(`Upload failed: ${response.statusText}`);
                 }
             } catch (error) {
-                alert('네트워크 오류로 업로드에 실패했습니다.');
+                alert('Network error during upload.');
             }
         });
     }
