feat: Full integration of GPT-4o Vision for robust Image-to-Image simulation and final code structure

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
             <button id="uploadButton" class="btn primary-btn full-width"><i class="fas fa-upload"></i> PC 파일 선택</button>
             <img id="originalImage" alt="업로드된 원본 이미지" class="preview-img" style="display: none;">
             <p id="fileStatus" class="status-text"></p>
+            <p class="safety-note" style="color:#111; font-weight:600; margin-top:15px;">
+                💡 **AI Vision 활성화:** 업로드된 사진을 AI가 먼저 분석하여 원본의 특징을 유지합니다.
+            </p>
         </section>
 
         <section id="textMode" class="mode-content" style="display: none;">
@@ -48,6 +51,9 @@
 
             <img id="qrOriginalImage" alt="QR로 업로드된 이미지" class="preview-img" style="display: none;">
             <p id="qrFileStatus" class="status-text"></p>
+            <p class="safety-note" style="color:#111; font-weight:600; margin-top:15px;">
+                💡 **AI Vision 활성화:** 업로드된 사진을 AI가 먼저 분석하여 원본의 특징을 유지합니다.
+            </p>
         </section>
 
         <div id="commonAISettings" class="common-settings">
@@ -68,7 +74,6 @@
 </div>
 
 <script>
-    // ... (이전 답변의 전체 JavaScript 로직을 여기에 붙여넣으세요) ...
     let currentMode = 'image';
     let pcUploadedFile = null;
     let qrUploadedFileName = null;
@@ -178,6 +183,7 @@
         const stylePrompt = document.getElementById('stylePromptInput').value;
 
         const formData = new FormData();
+        // 사용자 프롬프트와 스타일 프롬프트를 합칩니다.
         formData.append('prompt', prompt + (stylePrompt ? ', ' + stylePrompt : ''));
         formData.append('style', style);
         formData.append('mode', currentMode);
